# qttest

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  calculator.cpp  calculator.hpp  main.cpp
